--- a/block-BHaaan/index.html
+++ b/block-BHaaan/index.html
@@ -1,3 +1,41 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <nav>
+            <ul class='navbar'>
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">ABOUT</a></li>
+                <li><a href="#">BLOG</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class='container'>
+        <p class='blue'><strong>NOVEMBER 25 2015</strong></p>
+        <img src="assets/photo-1508341591423-4347099e1f19.jpeg" alt="first">
+        <h1><strong>This is my first Article</strong></h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam harum nisi reprehenderit dolorem reiciendis, iure ad sit, vel eligendi nihil, eveniet eum fuga obcaecati soluta inventore ipsa ut placeat repellat quas esse excepturi dolor saepe. Explicabo et aliquam minus enim dolore amet temporibus ea praesentium tenetur fuga iure nam architecto earum, nulla, placeat animi nihil. Possimus, nam atque quia dignissimos porro suscipit totam? Minima sunt fuga placeat pariatur tempore. Laboriosam fugiat excepturi tempora libero, quidem facilis omnis dolor minima fugit repudiandae, ex incidunt assumenda quae beatae dolorum numquam inventore consequuntur adipisci dignissimos doloribus nostrum quos. Accusantium maxime perspiciatis dolor inventore quibusdam deleniti quas neque impedit iure ex adipisci atque aliquam culpa facere excepturi ipsum autem iusto, illum consequuntur officiis eveniet tempora magnam architecto tenetur. Nostrum, ratione beatae aut maxime magnam non atque hic, distinctio reiciendis repellat exercitationem. Repellendus inventore beatae voluptate! Ab odio deleniti soluta vero possimus consectetur tempore accusamus magni! Voluptatum rem obcaecati voluptatem dolore praesentium natus. Tenetur unde quae laudantium repellendus asperiores aut. Eaque sequi consequatur obcaecati provident facilis quia magnam illo quibusdam officiis quam maxime itaque excepturi pariatur, optio voluptatum, numquam natus repellat corporis similique fuga reprehenderit enim deserunt fugiat tenetur. Maiores, earum odio iusto nostrum minus dolores dignissimos exercitationem reprehenderit velit, culpa dolorum? Dignissimos harum ab dolore ducimus quos earum autem aliquam culpa porro ipsum at aspernatur saepe officia esse, recusandae cum minima vitae. Beatae ad consectetur sit? Asperiores obcaecati, consequatur, dolorem blanditiis rem molestiae consequuntur error nam alias commodi voluptatem dolorum autem? Officiis, et aperiam.</p>
+    <a href="#"class='blue'>READ MORE</a>
+    <p class='blue'><strong>NOVEMBER 25 2015</strong></p>
+        <img src="assets/photo-1508341591423-4347099e1f19.jpeg" alt="first">
+        <h1><strong>This is my second Article</strong></h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam harum nisi reprehenderit dolorem reiciendis, iure ad sit, vel eligendi nihil, eveniet eum fuga obcaecati soluta inventore ipsa ut placeat repellat quas esse excepturi dolor saepe. Explicabo et aliquam minus enim dolore amet temporibus ea praesentium tenetur fuga iure nam architecto earum, nulla, placeat animi nihil. Possimus, nam atque quia dignissimos porro suscipit totam? Minima sunt fuga placeat pariatur tempore. Laboriosam fugiat excepturi tempora libero, quidem facilis omnis dolor minima fugit repudiandae, ex incidunt assumenda quae beatae dolorum numquam inventore consequuntur adipisci dignissimos doloribus nostrum quos. Accusantium maxime perspiciatis dolor inventore quibusdam deleniti quas neque impedit iure ex adipisci atque aliquam culpa facere excepturi ipsum autem iusto, illum consequuntur officiis eveniet tempora magnam architecto tenetur. Nostrum, ratione beatae aut maxime magnam non atque hic, distinctio reiciendis repellat exercitationem. Repellendus inventore beatae voluptate! Ab odio deleniti soluta vero possimus consectetur tempore accusamus magni! Voluptatum rem obcaecati voluptatem dolore praesentium natus. Tenetur unde quae laudantium repellendus asperiores aut. Eaque sequi consequatur obcaecati provident facilis quia magnam illo quibusdam officiis quam maxime itaque excepturi pariatur, optio voluptatum, numquam natus repellat corporis similique fuga reprehenderit enim deserunt fugiat tenetur. Maiores, earum odio iusto nostrum minus dolores dignissimos exercitationem reprehenderit velit, culpa dolorum? Dignissimos harum ab dolore ducimus quos earum autem aliquam culpa porro ipsum at aspernatur saepe officia esse, recusandae cum minima vitae. Beatae ad consectetur sit? Asperiores obcaecati, consequatur, dolorem blanditiis rem molestiae consequuntur error nam alias commodi voluptatem dolorum autem? Officiis, et aperiam.</p>
+    
+    <a href="#"class='blue'>READ MORE</a>
+</div>
+    <footer class='footer'>
+        <p>&copy 2021 Elis</p>
+    </footer>
+</body>
+</html>
+
 <!---
 
 ### Create a blog page having 2 articles.
